db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: my-web-app
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  # CRITICAL: The default worker looks exactly for the DNS name "db"
  name: db 
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db
