vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deployment
  namespace: my-web-app
  labels:
    app: vote
spec:
  replicas: 2 # Running 2 copies for high availability!
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote
        # ARCHITECT'S NOTE: If you built your own custom Docker image, change this line!
        image: ghcr.io/jianthe1/docker-k8s-demo:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: my-web-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: vote
